Bug 506090 - Black screen when turning HDR On in display settings for Samsung Q80T TV when TV Game Mode is Off, since plasma 6.4
Summary: Black screen when turning HDR On in display settings for Samsung Q80T TV when...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-06-24 06:39 UTC by 0RF30
Modified: 2025-07-03 12:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.2
Sentry Crash Report:


Attachments
drm_info tv game mode off (125.38 KB, text/plain)
2025-06-27 15:51 UTC, 0RF30
Details
kscreen-doctor -o tv game mode off (2.71 KB, text/plain)
2025-06-27 15:52 UTC, 0RF30
Details
edid.bin tv game mode off (256 bytes, application/octet-stream)
2025-06-27 15:52 UTC, 0RF30
Details
drm_info tv game mode on (125.26 KB, text/plain)
2025-06-27 15:57 UTC, 0RF30
Details
kscreen doctor -o tv game mode on (2.68 KB, text/plain)
2025-06-27 15:58 UTC, 0RF30
Details
edid.bin tv game mode on (256 bytes, application/octet-stream)
2025-06-27 15:58 UTC, 0RF30
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 0RF30 2025-06-24 06:39:52 UTC
SUMMARY

I get a black screen when enabling HDR for my Samsung Q80T TV. It works fine if TV Game Mode is On (but I keep it Off for watching movies since I have better HDR brightness outside of Game Mode). With TV Game Mode Off, I had no issue with plasma 6.3, and have no issue with Windows 11 and Gnome 48. TV is connected on HDMI 2.1 port, NVIDIA card (RTX 4080).

STEPS TO REPRODUCE
1. TV Game Mode is Off (Samsung Q80T TV)
2. Turn HDR on in Plasma 6.4 ticking HDR box in Display Settings
3. Apply

OBSERVED RESULT

Black screen

EXPECTED RESULT

HDR turned On

SOFTWARE/OS VERSIONS

Operating System: CachyOS Linux (Arch based)
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.3-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-9700K CPU @ 3.60GHz
Memory: 32 Gio of RAM (31.3 Gio usable)
Graphics Processor: NVIDIA GeForce RTX 4080
Comment 1 Zamundaaa 2025-06-27 15:23:09 UTC
Please attach the output of
> drm_info
> kscreen-doctor -o
and
> cat /sys/class/drm/card1-HDMI-A-1/edid > edid.bin
(connector name may need adjusting), once for when game mode is on, and once for when it's off.

If you don't have a second screen and need to run it through ssh, you can prepend WAYLAND_DISPLAY=wayland-0 before kscreen-doctor to make it work.
Comment 2 0RF30 2025-06-27 15:43:20 UTC
(In reply to Zamundaaa from comment #1)
> Please attach the output of
> > drm_info
> > kscreen-doctor -o
> and
> > cat /sys/class/drm/card1-HDMI-A-1/edid > edid.bin
> (connector name may need adjusting), once for when game mode is on, and once
> for when it's off.
> 
> If you don't have a second screen and need to run it through ssh, you can
> prepend WAYLAND_DISPLAY=wayland-0 before kscreen-doctor to make it work.

For game mode off, I assume that's without enabling HDR in plasma (since I can't), but what about game mode on ? Do you want these outputs with or without HDR enabled ?
Comment 3 Zamundaaa 2025-06-27 15:44:20 UTC
No, I need it with HDR on in both cases.
Comment 4 0RF30 2025-06-27 15:51:30 UTC
Created attachment 182729 [details]
drm_info tv game mode off
Comment 5 0RF30 2025-06-27 15:52:06 UTC
Created attachment 182730 [details]
kscreen-doctor -o tv game mode off
Comment 6 0RF30 2025-06-27 15:52:30 UTC
Created attachment 182731 [details]
edid.bin tv game mode off
Comment 7 0RF30 2025-06-27 15:57:54 UTC
Created attachment 182732 [details]
drm_info tv game mode on
Comment 8 0RF30 2025-06-27 15:58:19 UTC
Created attachment 182733 [details]
kscreen doctor -o tv game mode on
Comment 9 0RF30 2025-06-27 15:58:51 UTC
Created attachment 182734 [details]
edid.bin tv game mode on
Comment 10 0RF30 2025-06-27 15:59:23 UTC
(In reply to Zamundaaa from comment #3)
> No, I need it with HDR on in both cases.

Done. Thanks for looking at it.
Comment 11 Bug Janitor Service 2025-06-27 16:03:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7838
Comment 12 Zamundaaa 2025-06-27 16:08:02 UTC
Don't know how you managed to set the peak brightness override to zero, but that looks to be the problem, and the MR will guard against it.

Until that's in, deleting the
"maxPeakBrightnessOverride": 0
line from ~/.config/kwinoutputconfig.json should fix it.

Note that KWin saves its cached config when quitting, so you'll need to either edit the file while not logged in, or kill kwin with "killall -9 kwin_wayland" after making the change
Comment 13 Zamundaaa 2025-06-27 20:50:26 UTC
Git commit a98fa02d91b40aeb7c7a5253625d93fb1ee705b2 by Xaver Hugl.
Committed on 27/06/2025 at 16:02.
Pushed by zamundaaa into branch 'master'.

output management: add some safe guards for invalid brightness overrides

Apparently it's somehow possible to set a max peak brightness override of zero, which
makes it impossible to display anything.

M  +8    -0    src/outputconfigurationstore.cpp
M  +8    -0    src/wayland/outputmanagement_v2.cpp

https://invent.kde.org/plasma/kwin/-/commit/a98fa02d91b40aeb7c7a5253625d93fb1ee705b2
Comment 14 0RF30 2025-06-27 21:01:29 UTC
(In reply to Zamundaaa from comment #12)
> Don't know how you managed to set the peak brightness override to zero, but
> that looks to be the problem, and the MR will guard against it.
> 
> Until that's in, deleting the
> "maxPeakBrightnessOverride": 0
> line from ~/.config/kwinoutputconfig.json should fix it.
> 
> Note that KWin saves its cached config when quitting, so you'll need to
> either edit the file while not logged in, or kill kwin with "killall -9
> kwin_wayland" after making the change

That did the trick, thank you.
No idea on how it happens though. It was fine before I update to plasma 6.4 (from 6.3.5), and I had the issue immediately after.
Comment 15 Zamundaaa 2025-06-27 21:14:04 UTC
Git commit a5515e1396fb0b459cab7416dbe70e91757f6f0b by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 27/06/2025 at 20:50.
Pushed by zamundaaa into branch 'Plasma/6.4'.

output management: add some safe guards for invalid brightness overrides

Apparently it's somehow possible to set a max peak brightness override of zero, which
makes it impossible to display anything.


(cherry picked from commit a98fa02d91b40aeb7c7a5253625d93fb1ee705b2)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +8    -0    src/outputconfigurationstore.cpp
M  +8    -0    src/wayland/outputmanagement_v2.cpp

https://invent.kde.org/plasma/kwin/-/commit/a5515e1396fb0b459cab7416dbe70e91757f6f0b
Comment 16 Zamundaaa 2025-06-27 21:14:20 UTC
Git commit 7fc87b91dbc69bd9935211589ba3c84717269d58 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 27/06/2025 at 20:50.
Pushed by zamundaaa into branch 'Plasma/6.3'.

output management: add some safe guards for invalid brightness overrides

Apparently it's somehow possible to set a max peak brightness override of zero, which
makes it impossible to display anything.


(cherry picked from commit a98fa02d91b40aeb7c7a5253625d93fb1ee705b2)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +8    -0    src/outputconfigurationstore.cpp
M  +8    -0    src/wayland/outputmanagement_v2.cpp

https://invent.kde.org/plasma/kwin/-/commit/7fc87b91dbc69bd9935211589ba3c84717269d58