output management: add some safe guards for invalid brightness overrides

Apparently it's somehow possible to set a max peak brightness override of zero, which
makes it impossible to display anything.

BUG: 506090